<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:fitsSystemWindows="true">
  <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">

    <!-- Statusline-style header -->
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:background="@color/vi_bg_soft" android:paddingLeft="16dp" android:paddingRight="16dp" android:paddingTop="10dp" android:paddingBottom="10dp">
      <TextView android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/app_name" android:textColor="@color/vi_ink" android:textStyle="bold" android:textSize="20sp" android:fontFamily="@font/cascadia_mono"/>
      <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/launcher_brand_sub" android:textColor="@color/vi_green" android:textSize="12sp" android:fontFamily="@font/cascadia_mono"/>
    </LinearLayout>

    <!-- Modes bar, mirroring the on-screen keyboard statusline -->
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:background="@color/vi_bg">
      <TextView style="@style/launcher_mode_chip" android:background="@color/vi_blue" android:text="@string/launcher_mode_insert"/>
      <TextView style="@style/launcher_mode_chip" android:background="@color/vi_green" android:text="@string/launcher_mode_normal"/>
      <TextView style="@style/launcher_mode_chip" android:background="@color/vi_yellow" android:text="@string/launcher_mode_search"/>
      <TextView style="@style/launcher_mode_chip" android:background="@color/vi_orange" android:text="@string/launcher_mode_cmd"/>
      <TextView style="@style/launcher_mode_hint" android:text="@string/launcher_modes_hint"/>
    </LinearLayout>

    <View android:layout_width="fill_parent" android:layout_height="1dp" android:layout_marginTop="12dp" android:background="@color/vi_accent"/>

    <TextView style="@style/paragraph" android:text="@string/launcher_description" android:textColor="@color/vi_ink" android:fontFamily="@font/cascadia_mono"/>

    <Button style="@style/vi_btn" android:text="@string/launcher_button_imesettings" android:onClick="launch_imesettings" android:layout_width="wrap_content"/>
    <Button style="@style/vi_btn" android:text="@string/launcher_button_imepicker" android:onClick="launch_imepicker" android:layout_width="wrap_content"/>
    <Button style="@style/vi_btn" android:text="@string/launcher_button_dictionaries" android:onClick="launch_dictionaries_activity" android:layout_width="wrap_content"/>

    <View android:layout_width="fill_parent" android:layout_height="1dp" android:layout_marginVertical="12dp" android:background="@color/vi_border"/>

    <TextView style="@style/launcher_label" android:text="@string/launcher_tryhere"/>
    <EditText android:id="@+id/launcher_tryhere_area" style="@style/vi_input" android:inputType="text" android:hint="@string/launcher_tryhere_hint" android:importantForAutofill="no"/>
    <TextView android:id="@+id/launcher_tryhere_text" style="@style/launcher_label"/>

    <View android:layout_width="fill_parent" android:layout_height="1dp" android:layout_marginVertical="12dp" android:background="@color/vi_border"/>

    <TextView style="@style/paragraph" android:text="@string/launcher_sourcecode" android:textColor="@color/vi_ink_dim" android:fontFamily="@font/cascadia_mono" android:textSize="12sp"/>
    <TextView style="@style/paragraph" android:text="@string/launcher_repo_url" android:autoLink="web" android:linksClickable="true" android:textColor="@color/vi_blue" android:fontFamily="@font/cascadia_mono" android:textSize="12sp"/>
  </LinearLayout>
</ScrollView>